samples/_failures_safe/1761267761_b7fc11_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_49918a21.c: In function ‘main’:
./samples/SAFE/__tmp_49918a21.c:165:5: error: expected declaration or statement at end of input
  165 |     matrix_print(&mat1);
      |     ^~~~~~~~~~~~
